fixed horizontal scroll

--- a/client/app/journeyview/journeyview.less
+++ b/client/app/journeyview/journeyview.less
@@ -4,7 +4,14 @@
 @blue   :   #6eaee9;
 
 .journey-wrapper {
+  width: 100%;
+  overflow-x: scroll;
+  overflow-y: hidden;
+
+}
+.journey-container {
   max-width: 10000px;
+  min-width: 1500px;
   white-space:nowrap;
   text-align: center;
 }
@@ -43,4 +50,8 @@
     margin: 0 auto;
     float: none;
   }
+}
+
+h1 {
+  text-align: center;
 }
